# MCP_Learning

./: .gitignore  README.md  pyproject.toml  run_server.sh
mcp_calculatora/: server.py
