[project]
name = "mcp-calculatorA"
version = "1.0.0"
description = "一个简单的计算器 MCP 服务器"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "bolunruan"}
]
keywords = ["mcp", "calculator", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=0.9.0"
]

[project.scripts]
mcp-calculatorA = "mcp_calculatora:run"

[tool.setuptools]
packages = ["mcp_calculatora"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
